--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
   "version": "1.0",
   "data": "data.json",
   "logo": {
-    "file": "images/QFES.png",
-    "link": "images/QFES.png",
+    "file": "images/QFESlr.png",
+    "link": "",
     "text": "MR"
   },
   "text": {
